# pick_and_place

./: README.md
object_detection/devel/: .catkin  .rosinstall  setup.sh
object_detection/devel/lib/object_localization/: object_localization
object_detection/devel/lib/pkgconfig/: object_localization.pc
object_detection/src/object_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
object_detection/src/object_detection/launch/: object_detection_test.launch~
object_detection/src/object_detection/src/: PointCloud.cpp  geometry_model.cpp  geometry_model.cpp~  object_detection.cpp  object_detection.cpp~  object_localization.cpp~  point_cloud_preprocess.cpp
pick_and_place/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
pick_and_place/devel/lib/pick_and_place/: pick_and_place
pick_and_place/devel/lib/pkgconfig/: pick_and_place.pc
pick_and_place/src/pick_and_place/: CMakeLists.txt  CMakeLists.txt~  package.xml~
pick_and_place/src/pick_and_place/launch/: pick_and_place.launch  pick_and_place.launch~
pick_and_place/src/pick_and_place/src/: pick_and_place.cpp~
turtlebot_arm-test/: frames.gv
turtlebot_arm-test/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
turtlebot_arm-test/devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
turtlebot_arm-test/devel/include/turtlebot_arm_block_manipulation/: BlockDetectionAction.h  BlockDetectionActionFeedback.h  BlockDetectionActionGoal.h  (+18 more)
(+43 files in other folders)
